# api/swagger.json
@@ -1694,7 +1694,7 @@
                 }
             }
         },
-        "/v1/store/:id": {
+        "/v1/store/{id}": {
             "get": {
                 "security": [
                     {
@@ -1721,7 +1721,7 @@
                         "type": "string",
                         "description": "Store ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -1759,7 +1759,7 @@
                 }
             }
         },
-        "/v1/store/{id}/header-image": {
+        "/v1/store/{store_id}/product/{product_id}/header-image": {
             "post": {
                 "security": [
                     {
